--- a/custom_components/dyson_ir/manifest.json
+++ b/custom_components/dyson_ir/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "dyson_ir",
-  "name": "Dyson IR",
-  "codeowners": [],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "",
-  "iot_class": "local_polling",
-  "issue_tracker": "",
-  "requirements": [],
-  "version": "1.0.0"
+    "domain": "dyson_ir",
+    "name": "Dyson IR",
+    "codeowners": [],
+    "config_flow": true,
+    "dependencies": [],
+    "documentation": "https://github.com/sahilanguralla/hacs/blob/main/README.md",
+    "iot_class": "local_polling",
+    "issue_tracker": "https://github.com/sahilanguralla/hacs/issues",
+    "requirements": [],
+    "version": "1.0.0"
 }
